--- a/PuzzlePlatforms.uproject
+++ b/PuzzlePlatforms.uproject
@@ -8,7 +8,10 @@
 		{
 			"Name": "PuzzlePlatforms",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
