Updated lobby map and game mode, added new start session logic, misc edits

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MenuSystem/MainMenu.MainMenu
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/PuzzlePlatforms/maps/Game.Game
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformsGameInstance
 TransitionMap=/Game/PuzzlePlatforms/maps/Transition.Transition
